// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render tabs component correctly 1`] = `
<div>
  <div
    class="sc-gqjmRU hfRBYV"
  >
    <div
      class="sc-VigVT dTxBag"
    >
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX tab__button--active ewbiMR"
          data-index="0"
        >
          <div
            class="text text--primary sc-ifAKCX dHkpWl"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX ewbiMR"
          data-index="1"
        >
          <div
            class="text text--primary sc-ifAKCX dHkpWl"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX ewbiMR"
          data-index="2"
        >
          <div
            class="text text--primary sc-ifAKCX dHkpWl"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly with props for text of tabs 1`] = `
<div>
  <div
    class="sc-gqjmRU hfRBYV"
  >
    <div
      class="sc-VigVT dTxBag"
    >
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX tab__button--active ewbiMR"
          data-index="0"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX OqhaM"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX ewbiMR"
          data-index="1"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX OqhaM"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-jTzLTM HTrUN"
      >
        <div
          class="sc-fjdhpX ewbiMR"
          data-index="2"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX OqhaM"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
